--- a/Makefile.in
+++ b/Makefile.in
@@ -109,11 +109,11 @@ catman-do:
 	done
 
 install: manpages $(TARGETS)
-	$(INSTALL) -d $(DESTDIR)$(bindir)
-	$(INSTALL) -d $(DESTDIR)$(sbindir)
-	$(INSTALL) -d $(DESTDIR)$(mandir)
-	$(INSTALL) -d $(DESTDIR)$(mandir)/$(mansubdir)1
-	$(INSTALL) -d $(DESTDIR)$(mandir)/$(mansubdir)8
+	./mkinstalldirs $(DESTDIR)$(bindir)
+	./mkinstalldirs $(DESTDIR)$(sbindir)
+	./mkinstalldirs $(DESTDIR)$(mandir)
+	./mkinstalldirs $(DESTDIR)$(mandir)/$(mansubdir)1
+	./mkinstalldirs $(DESTDIR)$(mandir)/$(mansubdir)8
 	$(INSTALL) -m 4755 -s ssh $(DESTDIR)$(bindir)/ssh
 	$(INSTALL) -s scp $(DESTDIR)$(bindir)/scp
 	$(INSTALL) -s ssh-add $(DESTDIR)$(bindir)/ssh-add
@@ -132,7 +132,7 @@ install: manpages $(TARGETS)
 	ln -s ssh.1 $(DESTDIR)$(mandir)/$(mansubdir)1/slogin.1
 
 	if [ ! -f $(DESTDIR)$(sysconfdir)/ssh_config -a ! -f $(DESTDIR)$(sysconfdir)/sshd_config ]; then \
-		$(INSTALL) -d $(DESTDIR)$(sysconfdir); \
+		./mkinstalldirs $(DESTDIR)$(sysconfdir); \
 		$(INSTALL) -m 644 ssh_config.out $(DESTDIR)$(sysconfdir)/ssh_config; \
 		$(INSTALL) -m 644 sshd_config.out $(DESTDIR)$(sysconfdir)/sshd_config; \
 	fi
