Disable lastlog for AIX, as it's handled by the OS as part of the login   message

--- a/configure.in
+++ b/configure.in
@@ -36,6 +36,8 @@ case "$host" in
 	fi
 	AC_CHECK_FUNC(authenticate, [AC_DEFINE(WITH_AIXAUTHENTICATE)])
 	AC_DEFINE(BROKEN_GETADDRINFO)
+	dnl AIX handles lastlog as part of its login message
+	AC_DEFINE(DISABLE_LASTLOG)
 	;;
 *-*-hpux10*)
 	if test -z "$GCC"; then
