Stop lastlog detection setting DISABLE_LASTLOG - this flag means 'never even try to get the last login time', whereas we want to try to use wtmp/wtmpx unless told otherwise. See loginrec.c:getlast_entry().

--- a/configure.in
+++ b/configure.in
@@ -1010,8 +1010,8 @@ if test -z "$conf_lastlog_location"; then
 				fi
 		done
 		if test -z "$conf_lastlog_location"; then
-			AC_MSG_WARN([** Cannot find lastlog - disabling feature **])
-			AC_DEFINE(DISABLE_LASTLOG)
+			AC_MSG_WARN([** Cannot find lastlog **])
+			dnl Don't define DISABLE_LASTLOG - that means we don't try wtmp/wtmpx
 		fi
 	fi
 fi
