- (djm) Patch from Michael Stone <mstone@cs.loyola.edu> to add support for    Irix 6.x array sessions, project id's, and system audit trail id.

--- a/configure.in
+++ b/configure.in
@@ -90,7 +90,9 @@ case "$host" in
 	CFLAGS="$CFLAGS -I/usr/local/include"
 	LDFLAGS="$LDFLAGS"
 	MANTYPE='$(CATMAN)'
-	AC_MSG_WARN([*** Irix 6.x is not tested, please report you experiences *** ])
+	AC_DEFINE(WITH_IRIX_ARRAY)
+	AC_DEFINE(WITH_IRIX_PROJECT)
+	AC_DEFINE(WITH_IRIX_AUDIT)
 	no_libsocket=1
 	no_libnsl=1
 	;;
