- (djm) Added 'distprep' make target to simplify packaging

--- a/Makefile.in
+++ b/Makefile.in
@@ -112,6 +112,9 @@ catman-do:
 			>$${f%%.[18]}.0 ; \
 	done
 
+distprep: catman-do
+	autoreconf
+
 install: manpages $(TARGETS) install-files host-key
 
 install-files:
