--- a/configure.in
+++ b/configure.in
@@ -150,6 +150,20 @@ case "$host" in
 	LIBS="$LIBS -lgen -lsocket"
 	no_dev_ptmx=1
 	;;
+*-dec-osf*)
+# This is untested
+	if test ! -z "USE_SIA" ; then
+		AC_MSG_CHECKING(for Digital Unix Security Integration Architecture)
+		if test -f /etc/sia/matrix.conf; then
+			AC_MSG_RESULT(yes)
+			AC_DEFINE(HAVE_OSF_SIA)
+			AC_DEFINE(DISABLE_LOGIN)
+			LIBS="$LIBS -lsecurity -ldb -lm -laud"
+		else
+			AC_MSG_RESULT(no)
+		fi
+	fi
+	;;
 esac
 
 # Allow user to specify flags
