- (djm) Fix incorrect configure handling of --with-rsh-path option. Fix from    Lutz Jaenicke <Lutz.Jaenicke@aet.TU-Cottbus.DE>

--- a/configure.in
+++ b/configure.in
@@ -713,7 +713,7 @@ AC_ARG_WITH(rsh,
 	[  --with-rsh=PATH         Specify path to remote shell program ],
 	[
 		if test "x$withval" != "$no" ; then
-			rsa_path=$withval
+			rsh_path=$withval
 		fi
 	],
 	[
