--- a/Makefile.in
+++ b/Makefile.in
@@ -150,20 +150,20 @@ install-files:
 	fi
 
 host-key: ssh-keygen
-	if [ -f "$(sysconfdir)/ssh_host_key" ] ; then \
-		echo "$(sysconfdir)/ssh_host_key already exists, skipping." ; \
+	if [ -f "$(DESTDIR)$(sysconfdir)/ssh_host_key" ] ; then \
+		echo "$(DESTDIR)$(sysconfdir)/ssh_host_key already exists, skipping." ; \
 	else \
-		./ssh-keygen -b 1024 -f $(sysconfdir)/ssh_host_key -N "" ; \
+		./ssh-keygen -b 1024 -f $(DESTDIR)$(sysconfdir)/ssh_host_key -N "" ; \
 	fi ; \
-	if [ -f $(sysconfdir)/ssh_host_dsa_key ] ; then \
-		echo "$(sysconfdir)/ssh_host_dsa_key already exists, skipping." ; \
+	if [ -f $(DESTDIR)$(sysconfdir)/ssh_host_dsa_key ] ; then \
+		echo "$(DESTDIR)$(sysconfdir)/ssh_host_dsa_key already exists, skipping." ; \
 	else \
-		./ssh-keygen -d -f $(sysconfdir)/ssh_host_dsa_key -N "" ; \
+		./ssh-keygen -d -f $(DESTDIR)$(sysconfdir)/ssh_host_dsa_key -N "" ; \
 	fi ;
 
 host-key-force: ssh-keygen
-	./ssh-keygen -b 1024 -f $(sysconfdir)/ssh_host_key -N ""
-	./ssh-keygen -d -f $(sysconfdir)/ssh_host_dsa_key -N ""
+	./ssh-keygen -b 1024 -f $(DESTDIR)$(sysconfdir)/ssh_host_key -N ""
+	./ssh-keygen -d -f $(DESTDIR)$(sysconfdir)/ssh_host_dsa_key -N ""
 
 uninstallall:	uninstall
 	-rm -f $(DESTDIR)$(sysconfdir)/ssh_config
