--- a/configure.in
+++ b/configure.in
@@ -108,10 +108,10 @@ case "$host" in
 *-next-*)
 	# hardwire lastlog location (can't detect it on some versions)
 	conf_lastlog_location="/usr/adm/lastlog"
+        conf_utmp_location=/etc/utmp
 	AC_DEFINE(HAVE_NEXT)
 	CFLAGS="$CFLAGS -I/usr/local/include"
 	MAIL=/usr/spool/mail
-	conf_utmp_location=/etc/utmp
 	AC_MSG_WARN([*** Tested: PA-RISC/m68k  Untested: Sparc/Intel])
 	AC_MSG_WARN([*** Expect 'scp' to fail!])
 	AC_MSG_WARN([*** Please report any problems, thanks])
@@ -209,7 +209,7 @@ fi
 AC_CHECK_HEADERS(bstring.h endian.h lastlog.h limits.h login.h maillock.h netdb.h netgroup.h netinet/in_systm.h paths.h poll.h pty.h shadow.h security/pam_appl.h sys/bitypes.h sys/bsdtty.h sys/cdefs.h sys/poll.h sys/select.h sys/stat.h sys/stropts.h sys/sysmacros.h sys/time.h sys/ttcompat.h stddef.h time.h util.h utmp.h utmpx.h)
 
 # Checks for library functions.
-AC_CHECK_FUNCS(arc4random atexit b64_ntop bcopy bindresvport_af clock freeaddrinfo gai_strerror getaddrinfo getnameinfo getrusage innetgr md5_crypt memmove mkdtemp on_exit openpty rresvport_af setenv seteuid setlogin setproctitle setreuid snprintf strlcat strlcpy vsnprintf vhangup _getpty __b64_ntop)
+AC_CHECK_FUNCS(arc4random atexit b64_ntop bcopy bindresvport_af clock freeaddrinfo gai_strerror getaddrinfo getnameinfo getrusage innetgr md5_crypt memmove mkdtemp on_exit openpty rresvport_af setenv seteuid setlogin setproctitle setreuid sigaction sigvec snprintf strlcat strlcpy vsnprintf vhangup _getpty __b64_ntop)
 dnl    checks for time functions
 AC_CHECK_FUNCS(gettimeofday time)
 dnl    checks for libutil functions
