--- a/Makefile.in
+++ b/Makefile.in
@@ -124,11 +124,11 @@ install-files:
 	./mkinstalldirs $(DESTDIR)$(mandir)/$(mansubdir)1
 	./mkinstalldirs $(DESTDIR)$(mandir)/$(mansubdir)8
 	$(INSTALL) -m 4755 -s ssh $(DESTDIR)$(bindir)/ssh
-	$(INSTALL) -s scp $(DESTDIR)$(bindir)/scp
-	$(INSTALL) -s ssh-add $(DESTDIR)$(bindir)/ssh-add
-	$(INSTALL) -s ssh-agent $(DESTDIR)$(bindir)/ssh-agent
-	$(INSTALL) -s ssh-keygen $(DESTDIR)$(bindir)/ssh-keygen
-	$(INSTALL) -s sshd $(DESTDIR)$(sbindir)/sshd
+	$(INSTALL) -m 0755 -s scp $(DESTDIR)$(bindir)/scp
+	$(INSTALL) -m 0755 -s ssh-add $(DESTDIR)$(bindir)/ssh-add
+	$(INSTALL) -m 0755 -s ssh-agent $(DESTDIR)$(bindir)/ssh-agent
+	$(INSTALL) -m 0755 -s ssh-keygen $(DESTDIR)$(bindir)/ssh-keygen
+	$(INSTALL) -m 0755 -s sshd $(DESTDIR)$(sbindir)/sshd
 	$(INSTALL) -m 644 ssh.[01].out $(DESTDIR)$(mandir)/$(mansubdir)1/ssh.1
 	$(INSTALL) -m 644 scp.[01].out $(DESTDIR)$(mandir)/$(mansubdir)1/scp.1
 	$(INSTALL) -m 644 ssh-add.[01].out $(DESTDIR)$(mandir)/$(mansubdir)1/ssh-add.1
