- (djm) Don't seek in directory based lastlogs  - (djm) Fix --with-ipaddr-display configure option test. Patch from    Jarno Huuskonen <jhuuskon@messi.uku.fi>

--- a/configure.in
+++ b/configure.in
@@ -1031,7 +1031,7 @@ DISPLAY_HACK_MSG="no"
 AC_ARG_WITH(ipaddr-display,
 	[  --with-ipaddr-display   Use ip address instead of hostname in \$DISPLAY],
 	[
-		if test "x$withval" = "xno" ; then	
+		if test "x$withval" != "xno" ; then	
 			AC_DEFINE(IPADDR_IN_DISPLAY)
 			DISPLAY_HACK_MSG="yes" 
 		fi
