--- a/configure.in
+++ b/configure.in
@@ -179,6 +179,13 @@ mips-sony-bsd|mips-sony-newsos4)
 	MANTYPE='$(CATMAN)'
 	mansubdir=cat
 	;;
+*-ncr-sysv*)
+	CPPFLAGS="$CPPFLAGS -I/usr/local/include"
+	LDFLAGS="$LDFLAGS -L/usr/local/lib"
+	MANTYPE='$(CATMAN)'
+	mansubdir=cat
+	LIBS="$LIBS -lc89 -lnsl -lgen -lsocket"
+	;;
 *-sni-sysv*)
 	CPPFLAGS="$CPPFLAGS -I/usr/local/include"
 	LDFLAGS="$LDFLAGS -L/usr/local/lib -L/usr/ucblib"
