--- a/configure.in
+++ b/configure.in
@@ -156,7 +156,7 @@ mips-sony-bsd|mips-sony-newsos4)
 	;;
 *-*-solaris*)
 	CPPFLAGS="$CPPFLAGS -I/usr/local/include"
-	LDFLAGS="$LDFLAGS -L/usr/local/lib -R/usr/local/lib -L/usr/ucblib -R/usr/ucblib"
+	LDFLAGS="$LDFLAGS -L/usr/local/lib -R/usr/local/lib" 
 	need_dash_r=1
 	AC_DEFINE(PAM_SUN_CODEBASE)
 	# hardwire lastlog location (can't detect it on some versions)
