--- a/configure.in
+++ b/configure.in
@@ -152,6 +152,7 @@ mips-sony-bsd|mips-sony-newsos4)
 	AC_DEFINE(HAVE_NEXT)
 	AC_DEFINE(BROKEN_REALPATH)
 	AC_DEFINE(USE_PIPES)
+	AC_DEFINE(SAVED_IDS_WORK_WITH_SETEUID)
 	CPPFLAGS="$CPPFLAGS -I/usr/local/include"
 	CFLAGS="$CFLAGS"
 	;;
@@ -238,6 +239,7 @@ mips-sony-bsd|mips-sony-newsos4)
 	AC_DEFINE(HAVE_SCO_PROTECTED_PW)
 	AC_DEFINE(DISABLE_SHADOW)
 	AC_DEFINE(HAVE_BOGUS_SYS_QUEUE_H)
+	AC_DEFINE(SAVED_IDS_WORK_WITH_SETEUID)
 	AC_CHECK_FUNCS(getluid setluid)
 	;;
 *-*-sco3.2v5*)
@@ -252,6 +254,7 @@ mips-sony-bsd|mips-sony-newsos4)
 	AC_DEFINE(HAVE_SCO_PROTECTED_PW)
 	AC_DEFINE(DISABLE_SHADOW)
 	AC_DEFINE(HAVE_BOGUS_SYS_QUEUE_H)
+	AC_DEFINE(SAVED_IDS_WORK_WITH_SETEUID)
 	AC_CHECK_FUNCS(getluid setluid)
 	;;
 *-dec-osf*)
