--- a/configure.in
+++ b/configure.in
@@ -1280,14 +1280,14 @@ AC_ARG_WITH(egd-pool,
 		if test -z "$RANDOM_POOL" ; then
 			AC_MSG_CHECKING(for PRNGD/EGD socket)
 			# Insert other locations here
-			for egdsock in /var/run/egd-pool /etc/entropy /tmp/entropy ; do
+			for egdsock in /var/run/egd-pool /tmp/egd-pool /etc/entropy /tmp/entropy ; do
 				if test -r $egdsock && $TEST_MINUS_S_SH -c "test -S $egdsock -o -p $egdsock" ; then
 					EGD_SOCKET="$egdsock"
 					AC_DEFINE_UNQUOTED(EGD_SOCKET, "$EGD_SOCKET")
 					break;
 				fi
 			done
-			if test -x "$EGD_SOCKET" ; then
+			if test ! -z "$EGD_SOCKET" ; then
 				AC_MSG_RESULT($EGD_SOCKET)
 			else
 				AC_MSG_RESULT(not found)
