--- a/configure.in
+++ b/configure.in
@@ -203,6 +203,7 @@ mips-sony-bsd|mips-sony-newsos4)
 	IPADDR_IN_DISPLAY=yes
 	AC_DEFINE(USE_PIPES)
 	AC_DEFINE(IP_TOS_IS_BROKEN)
+	AC_DEFINE(HAVE_BOGUS_SYS_QUEUE_H)
 	mansubdir=cat
 	LIBS="$LIBS -lgen -lnsl -lucb"
 	;;
