- (bal) Reorder includes in Makefile.

--- a/openbsd-compat/Makefile.in
+++ b/openbsd-compat/Makefile.in
@@ -9,7 +9,7 @@ VPATH=@srcdir@
 CC=@CC@
 LD=@LD@
 CFLAGS=@CFLAGS@
-CPPFLAGS=@CPPFLAGS@ -I. -I.. -I$(srcdir) -I$(srcdir)/.. @DEFS@
+CPPFLAGS=-I. -I.. -I$(srcdir) -I$(srcdir)/.. @CPPFLAGS@ @DEFS@
 LIBS=@LIBS@
 AR=@AR@
 RANLIB=@RANLIB@
