--- a/configure.in
+++ b/configure.in
@@ -388,6 +388,24 @@ AC_EGREP_CPP(FOUNDIT,
 	]
 )
 
+# Check for g.gl_matchc glob() extension
+AC_MSG_CHECKING(for gl_matchc field in glob_t)
+AC_EGREP_CPP(FOUNDIT,
+        [
+                #include <glob.h>
+		int main(void){glob_t g; g.gl_matchc = 1;}
+        ],
+        [
+                AC_DEFINE(GLOB_HAS_GL_MATCHC)
+                AC_MSG_RESULT(yes)
+        ],
+        [
+                AC_MSG_RESULT(no)
+        ]
+)
+
+
+
 # Check whether user wants Kerberos support
 KRB4_MSG="no" 
 AC_ARG_WITH(kerberos4,
